--- a/index.html
+++ b/index.html
@@ -4,163 +4,14 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>College Portal</title>
-<style>
-/* Global */
-body {
-    font-family: 'Poppins', sans-serif;
-    margin: 0;
-    background: #e0e7ff;
-    color: #333;
-}
-
-/* Navigation */
-nav {
-    background: linear-gradient(90deg, #4f46e5, #3b82f6);
-    padding: 15px 0;
-    text-align: center;
-    box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-}
-nav a {
-    color: white;
-    margin: 0 20px;
-    font-weight: 600;
-    text-decoration: none;
-    padding: 10px 20px;
-    border-radius: 10px;
-    transition: all 0.3s ease;
-}
-nav a:hover {
-    background: rgba(255,255,255,0.2);
-    transform: scale(1.05);
-}
-
-/* Sections */
-section {
-    display: none;
-    padding: 40px 20px;
-    max-width: 900px;
-    margin: 30px auto;
-    background: #ffffff;
-    border-radius: 15px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    transition: all 0.3s ease;
-}
-section.active { display: block; }
-
-h2 {
-    text-align: center;
-    color: #4f46e5;
-    margin-bottom: 25px;
-}
-
-/* Events Cards */
-.event-card {
-    background: linear-gradient(135deg, #a5b4fc, #6366f1);
-    color: white;
-    padding: 20px;
-    margin: 15px 0;
-    border-radius: 15px;
-    box-shadow: 0 8px 15px rgba(0,0,0,0.15);
-    transition: transform 0.3s ease, box-shadow 0.3s ease;
-}
-.event-card:hover {
-    transform: translateY(-7px);
-    box-shadow: 0 15px 25px rgba(0,0,0,0.2);
-}
-
-/* Sub-tabs inside Complaints */
-.sub-tabs {
-    text-align: center;
-    margin-bottom: 20px;
-}
-.sub-tabs button {
-    background: #4f46e5;
-    color: white;
-    border: none;
-    padding: 10px 20px;
-    margin: 0 10px;
-    border-radius: 10px;
-    cursor: pointer;
-    transition: 0.3s;
-}
-.sub-tabs button:hover {
-    background: #3b82f6;
-}
-.sub-tab { display: none; }
-.sub-tab.active { display: block; }
-
-/* Complaint Form */
-form {
-    display: flex;
-    flex-direction: column;
-    background: white;
-    padding: 25px;
-    border-radius: 15px;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.1);
-}
-input, textarea, button {
-    width: 100%;
-    padding: 12px;
-    margin: 10px 0;
-    border-radius: 10px;
-    border: 1px solid #ddd;
-    font-size: 1rem;
-    outline: none;
-    transition: 0.3s;
-}
-input:focus, textarea:focus {
-    border-color: #4f46e5;
-    box-shadow: 0 0 8px rgba(79,70,229,0.3);
-}
-button {
-    background: #4f46e5;
-    color: white;
-    font-weight: bold;
-    border: none;
-    cursor: pointer;
-    box-shadow: 0 5px 15px rgba(79,70,229,0.3);
-    transition: transform 0.2s ease, box-shadow 0.2s ease;
-}
-button:hover {
-    transform: translateY(-3px);
-    box-shadow: 0 8px 20px rgba(79,70,229,0.4);
-}
-
-/* Timetable Table */
-table {
-    width: 100%;
-    border-collapse: collapse;
-    border-radius: 12px;
-    overflow: hidden;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-}
-th, td {
-    padding: 14px;
-    text-align: center;
-}
-th {
-    background: #3b82f6;
-    color: white;
-}
-tr:nth-child(even) { background: #f3f4f6; }
-tr:hover { background: #93c5fd; }
-
-/* Complaint message */
-#complaintMsg {
-    margin-top: 15px;
-    color: #059669;
-    font-weight: bold;
-    text-align: center;
-    font-size: 1.1rem;
-}
-</style>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <!-- Navigation -->
 <nav>
-  <a href="#" onclick="showSection('events')">Events</a>
-  <a href="#" onclick="showSection('complaints')">Complaints</a>
+  <a href="#" onclick="switchTab('events', this)">Events</a>
+  <a href="#" onclick="switchTab('complaints', this)">Complaints</a>
 </nav>
 
 <!-- Events Section -->
@@ -182,11 +33,10 @@ tr:hover { background: #93c5fd; }
 
   <!-- Sub-tabs -->
   <div class="sub-tabs">
-    <button onclick="showSubTab('submit')">Submit Complaint</button>
-    <button onclick="showSubTab('timetable')">View Timetable</button>
+    <button onclick="switchSubTab('submit', this)">Submit Complaint</button>
+    <button onclick="switchSubTab('timetable', this)">View Timetable</button>
   </div>
 
-  <!-- Submit Complaint -->
   <div id="submit" class="sub-tab active">
     <form id="complaintForm">
       <input type="text" id="name" placeholder="Your Name" required>
@@ -196,7 +46,6 @@ tr:hover { background: #93c5fd; }
     <div id="complaintMsg"></div>
   </div>
 
-  <!-- Timetable -->
   <div id="timetable" class="sub-tab">
     <table>
       <tr><th>Day</th><th>Subject</th></tr>
@@ -209,27 +58,6 @@ tr:hover { background: #93c5fd; }
   </div>
 </section>
 
-<!-- JavaScript -->
-<script>
-function showSection(sectionId) {
-    document.querySelectorAll('section').forEach(sec => sec.classList.remove('active'));
-    document.getElementById(sectionId).classList.add('active');
-}
-
-function showSubTab(tabId) {
-    document.querySelectorAll('.sub-tab').forEach(tab => tab.classList.remove('active'));
-    document.getElementById(tabId).classList.add('active');
-}
-
-// Complaint form submission
-document.getElementById('complaintForm').addEventListener('submit', function(e){
-    e.preventDefault();
-    const name = document.getElementById('name').value;
-    document.getElementById('complaintMsg').innerHTML = 
-        Thank you, <b>${name}</b>. Your complaint has been recorded.;
-    this.reset();
-});
-</script>
-
+<script src="script.js"></script>
 </body>
 </html>
